# picoc

./: .gitignore  Cargo.toml  README  README.md  test.sh
.github/workflows/: check.yml
src/: .parser.rs.pending-snap  allocator.rs  elaborator.rs  evaluator.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_ast.rs  parser_son.rs  selector.rs  translator.rs  typer.rs  visualizer.rs
tests/fixtures/bindings/: assignment_composition.c  composition.c  dyn_scope.c
tests/fixtures/control/: ifels_els.c
tests/fixtures/smoke/: mandelbrot.c  pi.c  simple.c  too-simple.c
tests/fixtures/snap/bindings/: formal_param.c
tests/fixtures/snap/dynamics/bindings/: static_scope.c
tests/fixtures/snap/dynamics/control/: while.c
tests/fixtures/snap/lexical/: if_scope.c
tests/fixtures/snap/shared/bindings/: asnmt_expr.c  assignment.c  assignment_composition.c  composition.c  formal_param.c  formal_param_multi.c
tests/fixtures/snap/statics-c0/bindings/: func3.c0
tests/fixtures/snap/statics-c0/control/: if.c0  if2.c0  if3.c0  if4.c0  if5.c0
tests/fixtures/snap/statics-c0/flow/: if5.c0
tests/fixtures/snap/statics/control/: if.c0
