[package]
name = "picoc089"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Zhang"]
description = "C0 interpreter and C89->RV32I compiler"
readme = "README.md"
repository = "https://github.com/jeffzh4ng/picoc089"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "riscv"]
categories = ["compilers"]

[profile.dev.package]
insta.opt-level = 3

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
